Fix whitespace collapsing in tree view file/folder names
Fixes #16865

Multiple consecutive spaces in file and folder names were being
collapsed to single spaces in tree views due to white-space: nowrap.

Changed white-space from 'nowrap' to 'pre' in .theia-TreeNodeSegment
and .theia-TreeNodeSegmentGrow in packages/core/src/browser/style/tree.css
to preserve exact spacing in all tree views.

--- a/packages/core/src/browser/style/tree.css
+++ b/packages/core/src/browser/style/tree.css
@@ -118,7 +118,9 @@
 }
 
 .theia-Tree:focus-within .theia-TreeNode.theia-mod-focus,
-.theia-Tree .ReactVirtualized__List:focus-within .theia-TreeNode.theia-mod-focus {
+.theia-Tree
+  .ReactVirtualized__List:focus-within
+  .theia-TreeNode.theia-mod-focus {
   outline-width: 1px;
   outline-style: solid;
   outline-offset: -1px;
@@ -148,7 +150,7 @@
   align-items: center;
   flex-grow: 0;
   user-select: none;
-  white-space: nowrap;
+  white-space: pre;
 }
 
 .theia-TreeNodeSegment.flex {
@@ -159,7 +161,7 @@
   flex-grow: 1 !important;
   overflow: hidden;
   text-overflow: ellipsis;
-  white-space: nowrap;
+  white-space: pre;
 }
 
 .theia-TreeNodeTail {
@@ -169,10 +171,10 @@
 }
 
 .open-editors-node-row .theia-TreeNode .theia-TreeNodeContent .noWrapInfo > * {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    display: inline;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  display: inline;
 }
 
 .theia-TreeNodeSegment mark {
